change announcement block header text and paragraph text

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <section class="announcement-section">
         <div class="wc-container">
             <div class="content">
-                <h5>This is announcement block header written in h5</h5>
+                <h5>An announcement header written in h5 tag</h5>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam mi ligula, feugiat quis massa nec, sollicitudin elementum sapien. Proin in pulvinar eros. <a href="#0">Vestibulum</a> fringilla massa magna, consectetur commodo ligula bibendum non.
+                    This is a paragraph. You can have your favourite text here with some anchor tags. Grab this source code on <a href="https://github.com/gayanvirajith/announcement-block">Github</a>.
                 </p>
             </div>
             <div class="action">
