Fixed a typo on paragraphe & real link added to the button href.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <div class="content">
                 <h5>An announcement header written in h5 tag</h5>
                 <p>
-                    This is a paragraph. You can have your favourite text here with some anchor tags. Grab this source code on <a href="https://github.com/gayanvirajith/announcement-block">Github</a>.
+                    This is a paragraph. You can have your favorite text here with some anchor tags. Grab this source code on <a href="https://github.com/gayanvirajith/announcement-block">Github</a>.
                 </p>
             </div>
             <div class="action">
-                <a href="#0">Button</a>
+                <a href="https://github.com/gayanvirajith/announcement-block">Back to Github</a>
             </div>
         </div>
     </section> 
